Finally!  Continuation events now implemented with VirtualThreads.
Whatta country!